toolkit/components/antitracking/test/browser/browser_onModifyRequestNotificationForTrackingResources.js
@@ -9,6 +9,7 @@ ChromeUtils.import("resource://gre/modules/Services.jsm");
  * canceled.
  */
 
+let gExpectedResourcesSeen = 0;
 async function onModifyRequest() {
   return new Promise((resolve, reject) => {
     Services.obs.addObserver(function observer(subject, topic, data) {
@@ -18,10 +19,25 @@ async function onModifyRequest() {
       if (httpChannel.URI.prePath + "/" != TEST_3RD_PARTY_DOMAIN_TP) {
         return;
       }
-      ok(spec.endsWith("empty.js"), "Correct resource observed");
-      Services.obs.removeObserver(observer, "http-on-modify-request");
-      resolve();
-    }, "http-on-modify-request");
+      if (spec.endsWith("empty.js")) {
+        ok(true, "Correct resource observed");
+        ++gExpectedResourcesSeen;
+      } else if (spec.endsWith("empty.js?redirect")) {
+        httpChannel.redirectTo(Services.io.newURI(spec.replace("empty.js?redirect", "head.js")));
+      } else if (spec.endsWith("empty.js?redirect2")) {
+        httpChannel.suspend();
+        setTimeout(() => {
+          httpChannel.redirectTo(Services.io.newURI(spec.replace("empty.js?redirect2", "head.js")));
+          httpChannel.resume();
+        }, 100);
+      } else if (spec.endsWith("head.js")) {
+        ++gExpectedResourcesSeen;
+      }
+      if (gExpectedResourcesSeen == 3) {
+        Services.obs.removeObserver(observer, "http-on-modify-request");
+        resolve();
+      }
+    }, "http-on-modify-request", false);
   });
 }
 
